--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,10 @@ inputs:
   endpoint:
     description: 'languages API endpoint'
     required: true
+  excluded-languages:
+    description: 'Use a list here to exclude specific languges from your CodeQL scan.  Example: ["python", "javascript"]'
+    required: false
+    default: '[]'
 outputs:
   languages:
     description: 'List of languages that will set the job matrix'
@@ -17,5 +21,5 @@ runs:
   args:
    - ${{ inputs.access-token }}
    - ${{ inputs.endpoint }}
-   - ${{ inputs.codeql-languages }}
+   - ${{ inputs.excluded-languages }}
 
