--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   endpoint:
     description: 'languages API endpoint'
     required: true
+  exclude:
+    description: 'Use a comma separated list here to exclude specific languges from your CodeQL scan.  Example: "python, java"'
+    required: false
 outputs:
   languages:
     description: 'List of languages that will set the job matrix'
@@ -17,5 +20,5 @@ runs:
   args:
    - ${{ inputs.access-token }}
    - ${{ inputs.endpoint }}
-   - ${{ inputs.codeql-languages }}
+   - ${{ inputs.exclude }}
 
